# libmspdb

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  gh-release.yml
debian/: changelog  control  libmspdb-dev.install  libmspdb1.install  rules
include/: DebugInfoStream.hh  DebugModuleInfo.hh  ImageSectionHeader.hh  Mapping.hh  OMAPFromSourceStream.hh  OptionalDebugHeader.hh  PDB.hh  PDBStore.hh  SectionHeaderStream.hh  StreamDirectory.hh  SymbolRecordStream.hh  TypeInfoStream.hh  file_exception.hh  pdb_exception.hh
include/type_info/: BUILTIN_TYPE.hh  CV_Access.hh  CV_MethodProperty.hh  CV_PointerMode.hh  CV_PointerType.hh  LEAF_TYPE.hh  LF_ARGLIST.hh  LF_ARRAY.hh  LF_BITFIELD.hh  LF_BUILTIN.hh  LF_CLASS.hh  LF_ENUM.hh  LF_ENUMERATE.hh  LF_FIELDLIST.hh  LF_FIELDLIST_CONTAINER.hh  LF_MEMBER.hh  LF_METHODLIST.hh  LF_MFUNCTION.hh  LF_MODIFIER.hh  LF_NESTTYPE.hh  LF_POINTER.hh  LF_PROCEDURE.hh  LF_STRUCTURE.hh  LF_TYPE.hh  LF_UNION.hh  lf_types.hh
src/: CMakeLists.txt  DebugInfoStream.cc  DebugModuleInfo.cc  ImageSectionHeader.cc  Mapping.cc  OMAPFromSourceStream.cc  OptionalDebugHeader.cc  PDB.cc  PDBStore.cc  SectionHeaderStream.cc  StreamDirectory.cc  SymbolRecordStream.cc  TypeInfoStream.cc  builtin_expect.hh  file_exception.cc  pdb_exception.cc  portable_endian.hh
src/type_info/: BUILTIN_TYPE.cc  CV_Access.cc  CV_FieldAttributes.hh  CV_MethodProperty.cc  CV_PointerMode.cc  CV_PointerType.cc  CV_Property.hh  LEAF_TYPE.cc  LF_ARGLIST.cc  LF_ARRAY.cc  LF_BITFIELD.cc  LF_BUILTIN.cc  LF_CLASS.cc  LF_ENUM.cc  LF_ENUMERATE.cc  LF_FIELDLIST.cc  LF_FIELDLIST_CONTAINER.cc  LF_MEMBER.cc  LF_METHODLIST.cc  LF_MFUNCTION.cc  LF_MODIFIER.cc  LF_NESTTYPE.cc  LF_POINTER.cc  LF_PROCEDURE.cc  LF_STRUCTURE.cc  LF_TYPE.cc  LF_UNION.cc  LF_VALUE.cc  LF_VALUE.hh  Makefile
tests/: .gitignore  CMakeLists.txt  pdbdump.cc  pdbfetch.cc  pdbtypes.cc  pdbtypetree.cc  pdbwrapper.cc
