CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(libmspdb)

IF( NOT CMAKE_BUILD_TYPE )
     SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    SET(CMAKE_INSTALL_PREFIX "/usr")
ENDIF()

SET(ALL_PACKAGES "")

SET(PACKAGE_MAJOR_VERSION 0)
SET(PACKAGE_MINOR_VERSION 50)
SET(PACKAGE_PATCH_VERSION 2)

IF ( PACKAGE_PATCH_VERSION_EXTRA )
     SET(PACKAGE_PATCH_VERSION "${PACKAGE_PATCH_VERSION}.${PACKAGE_PATCH_VERSION_EXTRA}")
ENDIF()

FILE(GLOB_RECURSE HEADERS ${PROJECT_SOURCE_DIR}/include/*.hh)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

# Format target
ADD_CUSTOM_TARGET(
     format
     COMMAND find ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/include -name '*.hh' -o -iname '*.cc' | xargs clang-format -i -style=file
)

# Install rule for include headers
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include/mspdb COMPONENT libmspdb-dev)

# Deb package generation
SET(CPACK_DEB_COMPONENT_INSTALL ON)
SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_VERSION "${PACKAGE_MAJOR_VERSION}.${PACKAGE_MINOR_VERSION}.${PACKAGE_PATCH_VERSION}")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Stephen Pape <papes@ainfosec.com>")

SET(CPACK_DEBIAN_LIBMSPDB-DEV_PACKAGE_NAME "libmspdb-dev")
SET(CPACK_DEBIAN_LIBMSPDB-DEV_PACKAGE_DESCRIPTION_SUMMARY "PDB parsing library - Development headers")
SET(CPACK_DEBIAN_LIBMSPDB-DEV_PACKAGE_DEPENDS "libmspdb1" )
SET(CPACK_DEBIAN_LIBMSPDB-DEV_PACKAGE_ARCHITECTURE "amd64")
SET(CPACK_DEBIAN_LIBMSPDB-DEV_PACKAGE_SECTION "utils")
SET(CPACK_DEBIAN_LIBMSPDB-DEV_PACKAGE_PRIORITY "extra")
SET(CPACK_DEBIAN_LIBMSPDB-DEV_PACKAGE_RECOMMENDS "")
SET(CPACK_DEBIAN_LIBMSPDB-DEV_PACKAGE_SUGGESTS "")

SET(CPACK_DEBIAN_LIBMSPDB1_PACKAGE_NAME "libmspdb1")
SET(CPACK_DEBIAN_LIBMSPDB1_PACKAGE_DESCRIPTION_SUMMARY "PDB parsing library")
SET(CPACK_DEBIAN_LIBMSPDB1_PACKAGE_DEPENDS "libcurl3 | libcurl4")
SET(CPACK_DEBIAN_LIBMSPDB1_PACKAGE_ARCHITECTURE "amd64")
SET(CPACK_DEBIAN_LIBMSPDB1_PACKAGE_SECTION "utils")
SET(CPACK_DEBIAN_LIBMSPDB1_PACKAGE_PRIORITY "extra")
SET(CPACK_DEBIAN_LIBMSPDB1_PACKAGE_RECOMMENDS "")
SET(CPACK_DEBIAN_LIBMSPDB1_PACKAGE_SUGGESTS "")

INCLUDE(CPack)
