CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(libmspdb1)

# We need libcurl for PDBStore
FIND_PACKAGE(CURL REQUIRED)
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR}/../)

# Grab all of our source files
FILE(GLOB_RECURSE SOURCES "*.cc")

# Have CMake build the library
ADD_LIBRARY(mspdb SHARED ${SOURCES})

# Link our library
TARGET_LINK_LIBRARIES(mspdb ${CURL_LIBRARIES} stdc++fs)

 # I only have confidence in LTO on gcc-9.1+
 IF (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
  IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    IF (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 9.1)
      MESSAGE(STATUS "Enabling link-time optimizations for libmspdb")
      SET_PROPERTY(TARGET mspdb PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
    ENDIF()
  ENDIF()
ENDIF()

# Install target
INSTALL(TARGETS mspdb LIBRARY DESTINATION lib COMPONENT libmspdb1)

